{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 121,
  "lineage": "a4df647c-1d40-d0f4-8a21-dfd7c477fe1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:loadbalancer/app/vpc1-alb-testpmtail-qa/4946b71533d82443",
            "arn_suffix": "app/vpc1-alb-testpmtail-qa/4946b71533d82443",
            "dns_name": "vpc1-alb-testpmtail-qa-289582407.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:loadbalancer/app/vpc1-alb-testpmtail-qa/4946b71533d82443",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vpc1-alb-testpmtail-qa",
            "security_groups": [
              "sg-0f47eb4a3b3bed0c4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c04bc61"
              },
              {
                "subnet_id": "subnet-cbf74ca6"
              }
            ],
            "subnets": [
              "subnet-0c04bc61",
              "subnet-cbf74ca6"
            ],
            "vpc_id": "vpc-860ae3eb",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:listener/app/vpc1-alb-testpmtail-qa/4946b71533d82443/299cc7f819430ff5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_302"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:listener/app/vpc1-alb-testpmtail-qa/4946b71533d82443/299cc7f819430ff5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:loadbalancer/app/vpc1-alb-testpmtail-qa/4946b71533d82443",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-project",
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:listener/app/vpc1-alb-testpmtail-qa/4946b71533d82443/3dc38eec6ebb0c3f",
            "certificate_arn": "arn:aws:acm:us-east-1:543745842878:certificate/f1e50cc4-4e7f-447a-96b8-87cd893eec4d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-testpmtail-qa/cf76d1cbe0021075",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:listener/app/vpc1-alb-testpmtail-qa/4946b71533d82443/3dc38eec6ebb0c3f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:loadbalancer/app/vpc1-alb-testpmtail-qa/4946b71533d82443",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-project",
            "aws_alb_target_group.tg-project",
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-testpmtail-qa/cf76d1cbe0021075",
            "arn_suffix": "targetgroup/vpc1-tg-testpmtail-qa/cf76d1cbe0021075",
            "deregistration_delay": 150,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-testpmtail-qa/cf76d1cbe0021075",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vpc1-tg-testpmtail-qa",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-860ae3eb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-testpmtail-qa/cf76d1cbe0021075-20210526020305054200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-testpmtail-qa/cf76d1cbe0021075",
            "target_id": "i-023ab98ff40e6eef4"
          },
          "dependencies": [
            "aws_alb_target_group.tg-project",
            "aws_instance.Project",
            "aws_security_group.sg-alb-project",
            "aws_security_group.sg-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:543745842878:instance/i-023ab98ff40e6eef4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "glr-Role-S3Apps",
            "id": "i-023ab98ff40e6eef4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "glr-cronos",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-084662d4fdf44c68a",
            "private_dns": "ip-10-20-4-13.ec2.internal",
            "private_ip": "10.20.4.13",
            "public_dns": "ec2-100-26-42-209.compute-1.amazonaws.com",
            "public_ip": "100.26.42.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ab074ba44709a21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c04bc61",
            "tags": {
              "Name": "testpmtail-qa"
            },
            "tags_all": {
              "Name": "testpmtail-qa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06213c24ab89020af"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-alb-project",
            "aws_security_group.sg-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543745842878:security-group/sg-0f47eb4a3b3bed0c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f47eb4a3b3bed0c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc1-alb-testpmtail-qa-sg",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-860ae3eb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543745842878:security-group/sg-06213c24ab89020af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06213c24ab89020af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "alb-testpmtail-qa-sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f47eb4a3b3bed0c4"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "sg-Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-a9c71ad1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vp1-testpmtail-qa-web-sg",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-860ae3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    }
  ]
}